--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/adam-dorin/neutrinoJS.git"
   },
-  "author": "",
+  "author": "Dorin Adam",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/adam-dorin/neutrinoJS/issues"
